--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     testCompile "org.mockito:mockito-core:3.4.0"
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.3.1.RELEASE'
     implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+    implementation group: 'org.flywaydb', name: 'flyway-core', version: '6.5.3'
 }
 
 group = 'com.thoughtworks'
